# sweep-solve-bvp

./: LICENSE  README.md  pyproject.toml
bvpsweep/: __init__.py  bvpsweep.py
examples/: gouy-chapman.py
